@@ -5,12 +5,16 @@ import com.KookBee.classservice.client.UserServiceClient;
 import com.KookBee.classservice.domain.dto.BootcampDTO;
 import com.KookBee.classservice.domain.entity.Bootcamp;
 import com.KookBee.classservice.domain.entity.Curriculum;
+import com.KookBee.classservice.domain.entity.StudentBootcamp;
+import com.KookBee.classservice.domain.enums.EStatus;
 import com.KookBee.classservice.domain.request.BootcampEditRequest;
 import com.KookBee.classservice.domain.request.BootcampInsertRequest;
 import com.KookBee.classservice.domain.request.BootcampStatusChangeRequest;
 import com.KookBee.classservice.domain.response.ManagerBootcampListResponse;
+import com.KookBee.classservice.domain.response.TeacherBootcampListResponse;
 import com.KookBee.classservice.repository.BootcampRepository;
 import com.KookBee.classservice.repository.CurriculumRepository;
+import com.KookBee.classservice.repository.StudentBootcampRepository;
 import com.KookBee.classservice.security.JwtService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -27,6 +31,7 @@ public class BootcampService {
     private final BootcampRepository bootcampRepository;
     private final CurriculumRepository curriculumRepository;
     private final UserServiceClient userServiceClient;
+    private final StudentBootcampRepository studentBootcampRepository;
     private final JwtService jwtService;
 
     public Bootcamp createClass(BootcampInsertRequest request) {
@@ -47,12 +52,12 @@ public class BootcampService {
 
     }
 
-    public String updateBootcampStatus(BootcampStatusChangeRequest request) {
+    public String updateBootcampStatus(Long bootcampId) {
         // 바꿔줘야 하는 아이
-        Bootcamp bootcamp = bootcampRepository.findById(request.getBootcampId()).orElse(null);
-        assert bootcamp != null;
-        bootcampRepository.save(bootcamp.updateStatus(request.getBootcampStatus()));
-        return request.getBootcampStatus().name() + "변경됨";
+        Optional<Bootcamp> findById = bootcampRepository.findById(bootcampId);
+        Bootcamp bootcamp = findById.orElseThrow(NullPointerException::new);
+        bootcampRepository.save(bootcamp.updateStatus(EStatus.DELETED));
+        return bootcamp.getBootcampStatus().name() + "변경됨";
     }
 
     public Bootcamp updateBootcamp(BootcampEditRequest request) {
@@ -65,35 +70,30 @@ public class BootcampService {
 
     public List<ManagerBootcampListResponse> getBootcampByManagerId() {
         Long userId = jwtService.tokenToDTO(jwtService.getAccessToken()).getId();
-        System.out.println("@@@@@@@@@@@@@@@@@"+userId);
         List<Bootcamp> bootcampList = bootcampRepository.findByManagerId(userId);
         List<ManagerBootcampListResponse> response = bootcampList.stream().map(el -> {
             Campus campusName = userServiceClient.getCampusById(el.getCampusId());
             return new ManagerBootcampListResponse(el, campusName.getCampusName());
-        }).collect(Collectors.toList());
+        }).toList().stream().filter(el -> el.getCurriculumStatus().equals(EStatus.PROCEEDING)).collect(Collectors.toList());
         return response;
     }
 
-    public List<Bootcamp> getBootcampByTeacherId() {
+    public List<TeacherBootcampListResponse> getBootcampByTeacherId() {
         Long userId = jwtService.tokenToDTO(jwtService.getAccessToken()).getId();
-        if(jwtService.isValidTokens()){
-            try{
-                List<Curriculum> findByTeacherId = curriculumRepository.findAllByTeacherId(userId);
-                Map<Long, Bootcamp> map = new HashMap<>();
-                List<Bootcamp> bootcampList = findByTeacherId.stream().map(curriculum -> {
-                    Bootcamp orDefault = map.getOrDefault(curriculum.getBootcamp(), null);
-                    if(orDefault==null) {
-                        orDefault = curriculum.getBootcamp();
-                        map.put(curriculum.getBootcamp().getId(),orDefault);
-                    }
-                    return new Bootcamp(orDefault);
-                }).toList();
+//        if(jwtService.isValidTokens()){
+//            try{
+                List<Bootcamp> allByTeacherId = bootcampRepository.findAllByTeacherId(userId);
+                List<TeacherBootcampListResponse> bootcampList = allByTeacherId.stream().map(bootcamp -> {
+                    String campusName = userServiceClient.getCampusById(bootcamp.getCampusId()).getCampusName();
+                    Integer studentCount = studentBootcampRepository.countBybootcamp(bootcamp);
+                    return new TeacherBootcampListResponse(bootcamp, campusName, studentCount);
+                }).collect(Collectors.toList());
                 return bootcampList;
-            } catch (Exception e) {
-                return null;
-            }
-        }
-        return null;
+//            } catch (Exception e) {
+//                return null;
+//            }
+//        }
+//        return null;
     }
 
     public Bootcamp getBootcampById(Long bootcampId) {
